syntax = "proto3";
package recastx;

message ImageProcParamPacket {
  uint32 downsampling_col = 1;
  uint32 downsampling_row = 2;
}

message SetParameterPacket {
  oneof request {
    ImageProcParamPacket image_proc = 1;
  }
}